Edited wiki page CustomSensors through web user interface.

--- a/wiki/CustomSensors.wiki
+++ b/wiki/CustomSensors.wiki
@@ -2,544 +2,12 @@
 #labels Featured
 #sidebar KrijcoWikiSidebar
 
-http://gf-ptf.googlecode.com/files/PTF_logo.png
+http://gf-ptf.googlecode.com/files/PTF_logo.png [http://code.google.com/p/prtg-addons/wiki/PTF_Custom_Sensors http://gf-ptf.googlecode.com/files/Continued.png]
 
-Looking for sensors written for PRTG version 8 or later? Take a look at [http://code.google.com/p/prtg-addons/wiki/Sensors this] page.
 
+All Custom Sensors are now compiled for PRTG 8 and continued at [http://code.google.com/p/prtg-addons/wiki/PTF_Custom_Sensors this] page.
 
-====Latest versions:====
-|| *Sensor* || *Version* || *Date* || *Download* ||
-||[#PassHash_Tool PassHash Tool]||1.0.1.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.PassHash%20Tool.zip here]||
-||[#CheckPRTGVersion CheckPRTGVersion]||1.0.4.1||14/10/2009||[http://code.google.com/p/prtg-addons/wiki/PTF_Custom_Sensors http://gf-ptf.googlecode.com/files/Continued.png]||
-||[#FTPFileCount FTPFileCount]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.FTPFileCount.zip here]||
-||[#NetworkFileCount NetworkFileCount]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.NetworkFileCount.zip here]||
-||[#LogFileReader LogFileReader]||1.0.2.1||06/08/2009||[http://prtg7addons.googlecode.com/files/PTF.LogfileReader.zip here]||
-||[#EmailCount EmailCount]||1.0.3.1||30/12/2009||[http://prtg7addons.googlecode.com/files/PTF.EmailCount.zip here]||
-||[#INIFileValue INIFileValue]||1.0.1.1||16/11/2009||[http://prtg7addons.googlecode.com/files/PTF.INIFileValue.zip here]||
-||[#PingWarning PingWarning]||1.0.2.1||30/11/2009||[http://prtg7addons.googlecode.com/files/PTF.PingWarning.zip here]||
-||[#CSVExport CSVExport]||1.0.2.3||14/01/2010||[http://prtg7addons.googlecode.com/files/PTF.CSVExport.zip here]||
-||[#CheckDHCP CheckDHCP]||1.0.1.1||15/03/2010||[http://prtg7addons.googlecode.com/files/PTF.CheckDHCP.zip here]||
-||[#SensorCount SensorCount]||1.0.1.1||24/03/2010||[http://prtg7addons.googlecode.com/files/PTF.SensorCount.zip here]||
-||[#LastWinUpdate LastWinUpdate]||1.0.2.2||14/05/2010||[http://prtg7addons.googlecode.com/files/PTF.LastWinUpdate.zip here]||
-||[#MessageCount MessageCount]||1.0.1.1||25/04/2010||[http://prtg7addons.googlecode.com/files/PTF.MessageCount.zip here]||
-||[#ContactState ContactState]||1.0.1.1||30/04/2010|||[http://prtg7addons.googlecode.com/files/PTF.ContactState.zip here]||
-||[#WinOSVersion WinOSVersion]||1.0.1.1||07/06/2010|||[http://prtg7addons.googlecode.com/files/PTF.WinOSVersion.zip here]||
-||[#PingJitter PingJitter]||1.0.1.1||21/06/2010|||[http://prtg7addons.googlecode.com/files/PTF.PingJitter.zip here]||
-||[#SSLCertExpiration SSLCertExpiration]||1.0.1.2||19/07/2010|||[http://prtg7addons.googlecode.com/files/PTF.SSLCertExpiration.zip here]||
-||[#IPonDNSBL IPonDNSBL]||1.0.1.1||21/07/2010|||[http://prtg7addons.googlecode.com/files/PTF.IPonDNSBL.zip here]||
-||[#UserLoggedin UserLoggedin]||1.0.1.1||31/07/2010|||[http://prtg7addons.googlecode.com/files/PTF.UserLoggedin.zip here]||
-||[#TraceRoute TraceRoute]||1.0.1.1||18/08/2010|||[http://prtg7addons.googlecode.com/files/PTF.TraceRoute.zip here]||
-||[#ADSReplFailures ADSReplFailures]||1.0.2.1||19/08/2010|||[http://prtg7addons.googlecode.com/files/PTF.ADSReplFailures.zip here]||
-||[#PingDelayedUp PingDelayedUp]||1.0.1.1||01/09/2010|||[http://prtg7addons.googlecode.com/files/PTF.PingDelayedUp.zip here]||http://gf-ptf.googlecode.com/files/Arrow_New_50.png||
-||[http://code.google.com/p/prtg-addons/wiki/PTF_CS_MediaStreamer MediaStreamer]||1.0.2.1||22/09/2010|||[http://code.google.com/p/prtg-addons/w/edit/PTF_Custom_Sensors here]||http://gf-ptf.googlecode.com/files/Arrow_New_50.png||
-
-[http://code.google.com/p/prtg-addons/wiki/PTF_Custom_Sensors http://gf-ptf.googlecode.com/files/Continued.png] This application is now compiled for PRTG 8 and continued at [http://code.google.com/p/prtg-addons/wiki/PTF_Custom_Sensors this] site.
-
-
-== Overview ==
-=== Custom Sensors for PRTG V7 ===
-http://gf-ptf.googlecode.com/files/CustomSensors7.png
-=== Custom Sensors for PRTG V7 and V8 ===
-http://gf-ptf.googlecode.com/files/CustomSensors8.png
-
-== General ==
-All Custom Sensors listed target the _.net framework 2.0_.
-
-Copy the .exe file to the "Program Files\PRTG Network Monitor\Custom Sensors\EXE" folder of your PRTG Network Monitor server. You can manually launch the .exe for an explanation of the parameters required.
-
-Comments, suggestions, feature requests? Leave a note [http://code.google.com/p/prtg7addons/wiki/UserFeedback here]
-
-----
-
-== !PassHash_Tool ==
-=== Summary ===
-This tool can be used in combination with PTF sensors that require a users password to be entered in the sensors settings section. The !PassHash can be used instead off the given password. [PassHash details]
-
- back to [#Latest_versions: top]
-
-=== Version history === 
-====1.0.1.1 _06/08/2009_====
- * First public version
-
-----
-
-== CheckPRTGVersion ==
-=== Summary ===
-This Custom Sensor compares your local PRTG version number with the last version available for download and go's into a warning state if a new version is available.
-
-Enter the ip-address and optional portnumber of your local PRTG server in the Parameters section of the Sensor Settings:
-{{{
-192.168.1.1:8080 [-ssl]
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history === 
-====1.0.4.1 _14/10/2009_====
- * Due to a change in PRTGs website the sensor could not retrieve the latest version anymore. This is fixed now.
-====1.0.3.1 _07/10/2009_====
- * Added optional parameter to force a https connection to the local PRTG server
-====1.0.2.1 _18/08/2009_====
- * Added compatibility with PRTG 7.2
-====1.0.1.1 _29/06/2009_====
- * First public version
-
-----
-
-== FTPFileCount ==
-=== Summary ===
-This Custom Sensor returns the number of files available on a FTP server.
-
-Enter the credentials (username and password) and the url in the Parameters section of the Sensor Settings:
-{{{
--u=username -p=password|passhash ftp://10.0.0.10/upload
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-====1.0.2.1 _06/08/2009_====
- * Added support for the passhash (scrambled password to be generated with the PTF PassHash Tool)
-====1.0.1.1 _29/06/2009_====
- * First public version
-
-----
-
-== !NetworkFileCount ==
-=== Summary ===
-This Custom Sensor returns the number of files available on a server\share.
-As your PRTG server runs under the local system account it can't access files on a \\server\share. This sensor uses the given username and password of a valid user account that can access the files and returns the number of files.
-
-Enter the credentials (username and password), folder (and optional search filter and setting to also search the sub folders) in the Parameters section of the Sensor Settings:
-{{{
--u=username -p=password|passhash -f=\\myserver\myshare [-s=*.exe -sub]
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-====1.0.2.1 _06/08/2009_====
- * Added support for the passhash (scrambled password to be generated with the PTF PassHash Tool)
-====1.0.1.1 _29/06/2009_====
- * First public version
-
-----
-
-== !LogFileReader ==
-=== Summary ===
-This Custom Sensor returns whether a specified string occurs in a (log) file. The last occurrence is remembered, so if a new entry is made with the specified string, the sensor will recognize the new entry.
-
-Enter the credentials (username and password), filename and searchstring in the Parameters section of the Sensor Settings:
-{{{
--u=username -p=password|passhash -f="c:\file location\log.txt" -s="String to search"
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-====1.0.2.1 _06/08/2009_====
- * Added support for the passhash (scrambled password to be generated with the PTF PassHash Tool)
-====1.0.1.1 _06/07/2009_====
- * First public version
-
-----
-
-== !EmailCount ==
-=== Summary ===
-This Custom Sensor returns the total number of messages in a users inbox.
-
-Enter the credentials (username and password) and emailserver in the Parameters section of the Sensor Settings:
-{{{
--u=username -p=password|passhash -s=emailserver [-o=serverport -ssl]
-
-example:
--s=balu.krijco.loc -u=john -p=****
-or
--s=pop.gmail.com -u=john@gmail.com -p=***** -o=995 -ssl
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-====1.0.3.1 _30/12/2009_====
- * New: added the following optional parameters:
-{{{
--t=   timeout in seconds. Default = 10 sec.
--to=  only count emails send to this address.	
--fr=  only count emails send from this address.
--su=  only count emails with the subject containing this string.
-}}}
-====1.0.2.1 _06/08/2009_====
- * Added support for the passhash (scrambled password to be generated with the PTF PassHash Tool)
-====1.0.1.1 _12/07/2009_====
- * First public version
-
-----
-
-== INIFileValue ==
-=== Summary ===
-This sensor returns the value from the field of a .ini file
-
-Enter the credentials (username and password), filename, section name and field name in the Parameters section of the Sensor Settings:
-{{{
--u=username -p=password|passhash -f=C:\Windows\win.ini -s=Mail -d=MAPI
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-====1.0.1.1 _16/11/2009_====
- * First public version
-
-----
-
-== !PingWarning ==
-=== Summary ===
-This sensor pings a device and goes into a warning state if no reply is received.
-
-Enter the ip-address|DNSname and optional parameters in the Parameters section of the Sensor Settings (_you can also use the %host placeholder to refer to the ip-address|DNSname of the parent device_):
-{{{
-192.168.1.1 [-w=500] [-i=64] [-l=32]
-or
-%host [-w=500] [-i=64] [-l=32]
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-====1.0.2.1 _30/11/2009_====
- * Added the ICMP error number to the sensor status output
-====1.0.1.1 _16/11/2009_====
- * First public version
-
-----
-
-== CSVExport ==
-=== Summary ===
-This sensor exports the data of a sensor to a .csv or .xml file.
-More [CSVExportSensor details]
-{{{
--pu=demo -pp=demodemo -ps=https://prtg.paessler.com -s=2008
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-====1.0.2.3 _14/01/2010_====
- * Bugfix: csvexport error 0:Impersonation of \ failed! `[87]` The parameter is incorrect.
-====1.0.2.2 _04/01/2010_====
- * Bugfix: solved a problem with the users password containing a #
-====1.0.2.1 _28/12/2009_====
- * New: added the following optional parameters:
-{{{
--co switch to combine the data of multiple sensor into one file.
--nh switch to ommit the column header line in a .csv export file.
--ns switch to ommit the summary line in a .csv export file.
--id switch to list the object ID in an export file.
-}}}
- * Changed: the CSVExport version number is now included in the .xml export file
-====1.0.1.1 _16/12/2009_====
- * First public version
-
-----
-
-== CheckDHCP ==
-=== Summary ===
-This sensor checks your DHCP server and returns the response time.
-
-{{{
--s=192.168.1.1
-}}}
-
-
-=== Version history ===
-====1.0.1.1 _15/03/2010_====
- * First public version
-
- back to [#Latest_versions: top]
-
-----
-
-== !SensorCount ==
-=== Summary ===
-This sensor counts the number of sensors on your PRTG server.
-
-{{{
--s=192.168.1.1 -u=username -p=password|passhash [-r=rootID]
-}}}
-Combine any of the following parameters
-{{{
--u    count up sensors
--d    count down sensors
--a    count acknowledged down sensors
--w    count warning sensors
--u    count unusual sensors
--p    count paused sensors
--k    count unknown sensors
-}}}
-
-
-=== Version history ===
-====1.0.1.1 _24/03/2010_====
- * First public version
-
- back to [#Latest_versions: top]
-
-
-----
-
-== !LastWinUpdate ==
-=== Summary ===
-This sensor gets the last time Windows Update has updated the specified computer.
-
-{{{
--u=username -p=password|passhash -c=192.168.1.1
-}}}
-
-=== Version history ===
-====1.0.1.1 _07/04/2010_====
- * First public version
-
-====1.0.2.2 _14/05/2010_====
- * Changed: the sensor used to analyze the Windows Update log file. As this method generates a lot of network traffic, this is now changed. The sensor uses a remote registry call now to query the last time Windows update has run. For this remote registry call to work, the Remote Registry service has to be enabled on the target machine. The link below will give you details on how to enable the Remote Registry service.
-http://support.gfi.com/manuals/en/esm7/esm7manual-1-100.html
-
- back to [#Latest_versions: top]
-
-
-----
-
-== !MessageCount ==
-=== Summary ===
-This sensor gets the number of messages in a MSMQ.
-Use the -t parameter to only count messages that are more than xx minutes old.
-
-{{{
--u=[domain\]username -p=password|passhash -qn=queuename [-qt=queuetype] [-m=machinename] [-t=timedelta]
-}}}
-
-=== Version history ===
-====1.0.1.1 _25/04/2010_====
- * First public version
-
- back to [#Latest_versions: top]
-
-
-----
-
-== !ContactState ==
-=== Summary ===
-This sensor monitors the state of a dry contact connected to a serial port.
-More [ContactStateSensor details]
-{{{
--s=SerialPort -p=PinNumber [-om=OpenMessage] [-cm=ClosedMessage]
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-
-====1.0.1.1 _30/04/2010_====
- * First public version
-
- back to [#Latest_versions: top]
-
-----
-
-== WinOSVersion ==
-=== Summary ===
-This sensor gets the Windows OS version of the specified computer.
-{{{
--u=domain\username -p=password|passhash -c=192.168.1.1
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-
-====1.0.1.1 _07/06/2010_====
- * First public version
-
- back to [#Latest_versions: top]
-
-----
-
-== !PingJitter ==
-=== Summary ===
-This sensor sends a number of ping requests to the host
-and returns the Statistical Jitter value in milliseconds.
-
-{{{
-192.168.1.1 [-n=5] [-d]
--n=   number of ping requests to send, default = 5
--d    debugmode, write all results to the output window
-      note: do NOT use this switch when running the .exe as a sensor   
-}}}
-
-Note:
-The sensor needs to be setup as "Value Type" Float 
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-
-====1.0.1.1 _21/06/2010_====
- * First public version
-
- back to [#Latest_versions: top]
-
-----
-
-== SSLCertExpiration ==
-=== Summary ===
-This sensor returns the number of days before your SSL certificate expires
-
-{{{
--u=https://prtg.paessler.com
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-
-====1.0.1.2 _19/07/2010_====
- * First public version
-
- back to [#Latest_versions: top]
-
-----
-
-== IPonDNSBL ==
-=== Summary ===
-This sensor checks a IP-Address against a number of blacklist servers
-and returns the number of DNS Blacklists the IP-Address is on.
-
-You can optionally provide a comma seperated list of blacklist servers.
-if omitted, the following blacklist servers are used:
-sbl-xbl.spamhaus.org, bl.spamcop.net, dnsbl.njabl.org,
-list.dsbl.org and multihop.dsbl.org.
-
-The readme.txt includes a list of optional blacklist servers.
-
-{{{
--ip=ip-address [-bl=blacklist servers]
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-
-====1.0.1.1 _21/07/2010_====
- * First public version
-
- back to [#Latest_versions: top]
-
-----
-
-== !UserLoggedin ==
-=== Summary ===
-This sensor gets the number of users that are loggedin on a computer directly or via a RDP session.
-
-You can optionally provide a comma seperated list of users to check if a specific user is loggedin or *not* loggedin.
-
-
-{{{
--c=computer -u=username -p=password|passhash [-f=filter][-fx] [-fi]
-
--c=computer        The ip-address or hostname of the computer to monitor.
--u=username        The name of the user account that has access to the computer via WMI service.
--p=password        The password or passhash(*) of the user account that has access to the computer via WMI service.
--f=filter          Optional filter to not or only count the users specified (comma seperated list).
--fx                Optional switch, users in the filter are not counted (default).
--fi                Optional switch, only users in the filter are counted.
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-
-====1.0.1.1 _31/07/2010_====
- * First public version
-
-====1.0.2.1 _04/08/2010_====
- * Bugfix: As user credentials cannot be used for local connections, running the sensor against the local machine (probe) produced an error. This is now fixed, simply omit the username and password when running the sensor against the local machine.
-
- back to [#Latest_versions: top]
-
-----
-
-== !TraceRoute ==
-=== Summary ===
-This sensor performs a trace route to the target and returns the number of hops.
-With the optional -w and -e switches the sensor can go into a warning or error state if the route has changed,
-since the last run of the sensor, regardless of the number of hops.
-
-The sensorID parameter has to be an unique value as it is used to store the last trace result.
-As of PRTG V7.3.2 the %sensorid placeholder is available, so -id=%sensorid will do the trick.
-
-{{{
--id=sensorID -t=target [-w] [-e]
-
--id=sensorID       The sensorID or other unique identifier.
--t=target          The IP address or hostname of the machine to trace the route to.
--w                 Optional switch to set the sensor in a warning state if the route has changed.
--e                 Optional switch to set the sensor in an error state if the route has changed.
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-
-====1.0.1.1 _18/08/2010_====
- * First public version
-
-----
-
-== ADSReplFailures ==
-=== Summary ===
-This sensor gets the number of replication errors from your domain controllers.
-
-{{{
--u=username -p=password|passhash -d=domain name (FQDN)
-
--u=username        The name of the user account that has access to the AD replication.
--p=password        The password or passhash(*) of the user account that has access to the AD replication.
--d=domain name     The Full Qualified Domain Name.
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-====1.0.2.1 _19/08/2010_====
- * New: Added parameters for username and password for an account to run the sensor.
-
-====1.0.1.1 _18/08/2010_====
- * First public version
-
-
-----
-
-== !PingDelayedUp ==
-=== Summary ===
-This ping sensor stays down for the given number of seconds before returning an Ok state.
-
-Use this sensor as the master dependency instead off the normal PING sensor as the normal one usually responds before many services do.
-
-{{{
-ip-address|hostname -id-sensorID -d=delay [-w=timeout] [-l=size] [-i=TTL]
-
--id=sensorID       The sensorID or other unique identifier.
--d=delay           The delay in seconds before returning an "Ok" state
--w=timeout         Optional timeout in miliseconds to wait for a reply, default = 500
--l=size            Optional send buffer size, default = 32 bytes
--i=TTL             Optional Time To Live, default = 64   
-}}}
-
- back to [#Latest_versions: top]
-
-=== Version history ===
-====1.0.1.1 _01/09/2010_====
- * First public version
-
-
- back to [#Latest_versions: top]
+What is changed?
+ * All Custom Sensors now have unified errorhandling and help.
+ * The username (-u) and password (-p) parameters have become optional for some sensors as PRTG 8 allows you to run a Custom Sensor with elevated credentials.
+ * Most Custom Sensors are still backwards compatible with PRTG 7.
