--- a/wiki/PRTG_Tools_by_Gerard_Feijth.wiki
+++ b/wiki/PRTG_Tools_by_Gerard_Feijth.wiki
@@ -1,16 +1,9 @@
 #summary The "PRTG Tools family" offers clients for Windows and Windows CE
 #sidebar KrijcoWikiSidebar
 
-http://gf-ptf.googlecode.com/files/PTF_logo.png
+http://gf-ptf.googlecode.com/files/PTF_logo.png [http://code.google.com/p/prtg-addons/wiki/PTF_Custom_Sensors http://gf-ptf.googlecode.com/files/Continued.png]
 
-= Introduction =
 
-The PRTG Tools Family consists out of a number of separate applications, command line tools and sensors, to be used in combination with your PRTG Network Monitor Server.
 
-All (group of) applications are listed in the sidebar on the left.
-
-==Navigation==
-Please use this sidebar to navigate to the various applications and sensors.
-
-==Prerequisites==
-All applications and sensors target the .NET Framework 2.0 or 3.5 and some require IIS to be installed. Please see the documentation included in the download or the explanation on the  applications webpage for more details.
+==== All Custom Sensors, Notifications and Tools are now compiled for PRTG 8 and continued at ====
+http://code.google.com/p/prtg-addons/wiki/PTF_Tools
