Edited wiki page VersionHistory through web user interface.

--- a/wiki/VersionHistory.wiki
+++ b/wiki/VersionHistory.wiki
@@ -11,111 +11,11 @@ Looking for tools written for PRTG version 8 or later? Take a look at [http://co
 
 ====Latest versions:====
 || *Application* || *Version* || *Date* || *Download* ||
-||[#TrayNotifier_version_history TrayNotifier]||3.0.6.1||13/10/2009||[http://prtg7addons.googlecode.com/files/Krijco.TrayNotifier.zip here]||[http://code.google.com/p/prtg-addons/wiki/PTF_Tools_VersionHistory http://gf-ptf.googlecode.com/files/Continued.png]||
-||[#NotifierGadget_version_history NotifierGadget]||1.0.5||01/12/2009||[http://prtg7addons.googlecode.com/files/Krijco.NotifierGadget.zip here]||[http://code.google.com/p/prtg-addons/wiki/PTF_Tools_VersionHistory http://gf-ptf.googlecode.com/files/Continued.png]||
-||[#NotifierGadgetXP_version_history NotifierGadgetXP]||1.0.2||26/05/2009||[http://prtg7addons.googlecode.com/files/Krijco.NotifierGadgetXP.zip here]||[http://code.google.com/p/prtg-addons/wiki/PTF_Tools_VersionHistory http://gf-ptf.googlecode.com/files/Continued.png]||
-||[#NotifierCE_version_history NotifierCE]||2.0.2.2||08/01/2010||[http://prtg7addons.googlecode.com/files/PTF.NotifierCE.zip here]||
-||[#Notifier_Proxy_version_history Notifier Proxy]||1.0.1.2||31/12/2009||[http://prtg7addons.googlecode.com/files/PTF.NotifierProxy.zip here]||
-||[#Distribution_Tool_version_history Distribution Tool]||1.0.2.1||09/09/2009||...||[http://code.google.com/p/prtg-addons/wiki/PTF_Tools_VersionHistory http://gf-ptf.googlecode.com/files/Continued.png]||
-||[#Translate_version_history Translation Tool]||1.0.5.1||06/06/2010||...||[http://code.google.com/p/prtg-addons/wiki/PTF_Tools_VersionHistory http://gf-ptf.googlecode.com/files/Continued.png]||
+||[#NotifierCE_version_history NotifierCE]||2.0.2.2||08/01/2010||[http://prtg7addons.googlecode.com/files/PTF.NotifierCE.zip here]||http://gf-ptf.googlecode.com/files/Discontinued.png||
+||[#Notifier_Proxy_version_history Notifier Proxy]||1.0.1.2||31/12/2009||[http://prtg7addons.googlecode.com/files/PTF.NotifierProxy.zip here]||http://gf-ptf.googlecode.com/files/Discontinued.png||
 ||[#Map_Designer_version_history Map Designer] ||1.0.5.1||03/06/2010||[http://prtg7addons.googlecode.com/files/PTF.Mapdesigner.zip here]||http://gf-ptf.googlecode.com/files/Discontinued.png||
-||[#Distribute_Sensors_version_history Distribute Sensors]||1.0.2.1||28/12/2009||...||[http://code.google.com/p/prtg-addons/wiki/PTF_Distribute_Sensors http://gf-ptf.googlecode.com/files/Continued.png]||
-||[#CSVImport_version_history CSVImport]||1.0.4.3||04/07/2010||...||[http://code.google.com/p/prtg-addons/wiki/PTF_Tools_VersionHistory http://gf-ptf.googlecode.com/files/Continued.png]||
-
-[http://code.google.com/p/prtg-addons/wiki/PTF_Tools_VersionHistory http://gf-ptf.googlecode.com/files/Continued.png] This application is now compiled for PRTG 8 and continued at [http://code.google.com/p/prtg-addons/wiki/PTF_Tools_VersionHistory this] site.
 
 http://gf-ptf.googlecode.com/files/Discontinued.png This application will not be continued anymore as PRTG 8 includes this functionality.
-
-==!TrayNotifier version history==
-=== Summary ===
-The !TrayNotifier is installed in the system tray, presenting the PRTG icon. When an alarm condition occurs, the icon becomes a flashing red dot. Right-clicking the icon, pops up a menu with various actions. [TrayNotifier details]
-
- back to [#Latest_versions: top]
-
-====3.0.6.1 _13/10/2009_====
- * Bugfix: In version 7.2.1.4722 PRTG made some changes in the xml output that caused warning sensors not to showup anymore.
- * New: Added a live graph to the Sensor Tree window.
- * New: Added a bar graph to the Sensor Overview window.
-====3.0.5.2 _30/09/2009_====
- * Bugfix: Getting graphs from the PRTG server did not use the configured proxy.
- * Changed: Downloading an update now automatically installs the update.
- * New: Option to acknowledge a down sensor (PRTG 7.2).
-====3.0.4.3 _14/09/2009_====
- * Bugfix: The object rename event in the Sensor Tree could fire unexpected.
- * Bugfix: Improved backwards compatibility with PRTG 7.1
- * New: Set your own timespan for a graph in the Sensor Tree "select" tab.
- * New: Added context menu to save graph to file or clipboard.
-====3.0.3.1 _03/09/2009_====
- * Changed: Login to device pages without showing username and passhash.
- * Changed: A read-only account will now be presented with less options instead of returning an error message
- * Changed: Small improvements in the user interface
- * New: Sensor Tree now supports drag and drop rearranging sensors, devices and groups.
- * New: The Sensor Tree context menu now supports:
-  * Renaming of objects
-  * Deleting objects
-  * Adding objects
-====3.0.2.1 _26/08/2009_====
- * Changed: Improved loading of the Sensor Tree.
- * Changed: Clicking the "sensor tree" link from the sensors window wil bring you automatically to the selected sensor.
- * Changed: Improved filter settings for userdefined applications.
- * New: Integrated VNC Viewer.
- * New: Added collapse option to the sensor tree.
-====3.0.1.2 _19/08/2009_====
- * Changed: All settings are now concentrated in one screen.
- * Changed: The Sensor Tree has been altered to show more instant information.
- * New: Added proxy settings for contacting your PRTG server.
- * The !TrayNotifier is now compatible with PRTG 7.2
-====2.0.2.2 _29/07/2009_====
- * Bugfix: In the latest PRTG version, some DOWN sensors do not produce there downtime anymore. This could cause the TrayNotifier not to refresh, showing the refresh seconds in red.
-====2.0.2.1 _10/07/2009_====
- * New: Added translation Czech.
- * New: Sensor Overview showing the status of all sensors with the same name. (i.e. all your temperature sensors in one overview) 
- * New: Updates can now also be downloaded from your own PRTG Server. (you need to use the !DistributionTool to enable this feature)
- * Changed: The Sensor History window can now be maximized. 
- * Changed: The Sensor History window now shows the date ranges as selected in the PRTG Server Administrator.
- * Changed: Released backwards compatibility with PRTG 7.0 and earlier.
- * Bugfix: Probepage could not be opened from the Sensortree.
-====2.0.1.1 _06/06/2009_====
- * New: The !TrayNotifier can now support multiple languages. Shipping languages are English, German, Dutch, French and Spanish.
- * New: Select the browser you want to use with PRTG (does not have to be your default browser).
- * New: Select the columns you want to show in the Sensors window (through the context menu) and order them by using drag and drop. 
- * New: Added a setting to determine if the Sensor window should be topmost.                       
- * Changed: Splitted the settings page up into a basic and an advanced settings page.
-====1.0.3.1 _11/05/2009_====
- * New: Added graphs to the sensor history window.
- * New: Aditional setting to also show paused devices.
- * New: Interaction with NotifierGadgetXP.
- * Minor changes in the user interface.
-====1.0.2.2 _22/04/2009_====
- * Bugfix: !TrayNotifier could crash on non Vista operating systems. This bug was introduced in version 1.0.2.1
-====1.0.2.1 _17/04/2009_====
- * New: Interaction with the !NotifierGadget, clicking Alarms, Warnings or Paused in the Gadget opens the !TrayNotifier sensor window.
- * New: Move objects up & down in the sensortree. Groups, Devices and Sensors can now be moved up and down in the sensortree.
- * New: Option to pause the !TrayNotifier. After pausing the !TrayNotifier the icon in the systemtray turns yellow. 
-====1.0.1.9 _08/04/2009_==== 
- * PRTG has changed some of its xml tags in version 7.1.1.3074. This version of the !TrayNotifier recognizes these new tags and is also backwards compatible.
- * Bugfix: A new PRTG version was not always recognized correctly, this is fixed now.
-====1.0.1.8 _01/04/2009_==== 
- * Fixed an issue with characters like "#" in the password.
- * New: Automatically check for updates at startup.
- * New: Associate one ore more External Applications with a sensor, device or group.
- * New: If the Network Monitor server returns a HTML error, the error is shown to the user.
- * New: Integrated web browser, does not show the url with username and password.
- * New: Filter setting to show only sensors from a specific probe, group or device down.
- * New: Sensor tree, showing probes, groups, devices and sensors.
- * New: Sensor history, showing the history of a sensor.
- * New: APC Power Distribution Unit integration, allowing the user to connect to the PDU's website or rebooting an outlet.
- * Integrated new features as of Network Monitor version 7.1
-  # Sensors can now be paused for a given period of time.
-  # The passhash is now automatically used instead of the password.
-  # An error can now be simulated on a sensor.
-  # The notification for a sensor or group can now be tested.
-====1.0.1.7 _10/02/2009_==== 
- * Reload PRTG Monitor version information after a connection loss.
- * Connection port can be set to use other then port 80 or HTTPS/SSL.
- * Minor changes in the user interface.
-====1.0.1.6 _20/01/2009_====
- * First public version.
 
 ----
 
@@ -167,78 +67,6 @@ The !NotifierProxy allows the !NotifierCE to connect to the Network Monitor serv
 
 ----
 
-==!NotifierGadget version history==
-=== Summary ===
-The !NotifierGadget is installed in the Vista sidebar, providing you with a constant view of the current number of alarms, warnings and paused sensors. [NotifierGadget details]
-
- back to [#Latest_versions: top]
-
-====1.0.5 _01/12/2009_====
- * Fixed a bug where characters like "#" in the username or password were not correctly parsed to the PRTG server.
-====1.0.4 _15/06/2009_====
- * fixed a bug where the number of alarms, warnings and paused sensors if more than 8 were displayed incorrectly.
-====1.0.3 _21/04/2009_====
- * Native PRTG now also reports Warnings and Paused sensors.
- * Fixed an interactivity issue with the !TrayNotifier, where the !TrayNotifier could popup every 5-10 minutes.
-====1.0.2 _17/04/2009_====
- * Now also works with native PRTG (see documentation for explanation).
- * Improved error handling.
- * Added interactivity with the !TrayNotifier.
-====1.0.1 _13/04/2009_====
- * First public version
-
-----
-
-==NotifierGadgetXP version history==
-=== Summary ===
-The NotifierGadgetXP can be installed on a Windows XP system or Vista system not running the sidebar. the NotifierGadgetXP provides you with a constant view of the current number of alarms, warnings and paused sensors. [NotifierGadgetXP details]
- 
- back to [#Latest_versions: top]
-====1.0.2 _26/05/2009_====
- * Changed the sidegrip to look more like a real gadget.
- * Fixed an issue where the bottom of the server name could be chopped of.
-====1.0.1 _11/05/2009_====
- * First public version
-
-----
-
-==Distribution Tool version history==
-=== Summary ===
-With this tool you can modify your PRTG Server download page to let your users download the TrayNotifier and NotifierGadget from the download page of your own PRTG Server. [Distribution details]
-
- back to [#Latest_versions: top]
-====1.0.2.1 _09/09/2009_====
- * Changed the look of the modified download page to match PRTG 7.2
-====1.0.1.5 _13/07/2009_====
- * First public version
-
-----
-
-==Translate version history==
-=== Summary ===
-PTF Translate is a tool used to create new language files for PRTG Network Monitor as well as for the !TrayNotifier. [Translate details]
-
- back to [#Latest_versions: top]
-
-====1.0.5.1 _06/06/2010_====
- * Changed: Compiled the executable with Visual Studio 2010.
- * Changed: Modified the search for updates.
- * Changed: Build the installer using !InstallShield.
- * Note: If you are upgrading from a previous version, you have to manually uninstall the previous version.
-====1.0.4.1 _28/11/2009_====
- * New: Option to automatically make backup files when saving a translation file.
- * New: Option to check for online updates. 
-====1.0.3.1 _06/10/2009_====
- * Changed: Small changes in the user interface.
- * New: Check for changes in the original strings when merging a file.
-====1.0.2.1 _11/09/2009_====
- * Bugfix: After deleting (a) row(s) the remaining rows are now renumbered.
- * New: Added drag and drop functionality to the grid (files can be dropped on the grid).
-====1.0.1.1 _05/08/2009_====
- * First public version.
-
-----
-
 ==Map Designer version history==
 === Summary ===
 PTF Map Designer is a tool used to create background images for PRTG maps. PTF Map Designer can be used as a transparent overlay over an existing PRTG map. [Mapdesigner details]
@@ -269,37 +97,3 @@ PTF Map Designer is a tool used to create background images for PRTG maps. PTF M
  * First public version.
 
 ----
-
-==Distribute Sensors version history==
-=== Summary ===
-PTF Distribute Sensors is a tool used to distribute (updates of) custom sensors to your PRTG Probes. [DistributeSensors details]
-
- back to [#Latest_versions: top]
-
-====1.0.2.1 _28/12/2009_====
- * Changed: Although data is send encrypted between GUI and web service, the encryption was always the same. In theory, encrypted credentials could be reused. With this version, the encryption changes in each session, preventing encrypted credentials to be reused.
-
-====1.0.1.1 _07/12/2009_====
- * First public version.
-
-----
-
-==CSVImport version history==
-=== Summary ===
-CSVImport lets you build graphs based on .csv files generated by CVSExport, or by selecting sensors from your PRTG server. [CSVImport details]
-
- back to [#Latest_versions: top]
-
-====1.0.4.3 _04/07/2010_====
- * New: Option to get raw data from your PRTG server for a timespan larger than 24 hours
-====1.0.3.1 _21/06/2010_====
- * Changed: Building charts now uses ChartFX 7.
- * Bugfix: Several bug fixes.
-====1.0.2.1 _13/06/2010_====
- * New: Sensors from different .csv files can now be combined into one graph.
- * New: Apart from using .csv files, you can now also get the sensor data directly from your PRTG server.
- * Changed: Modified the search for updates.
- * Changed: Build the installer using !InstallShield.
- * Note: If you are upgrading from a previous version, you have to manually uninstall the previous version.
-====1.0.1.1 _10/05/2010_====
- * First public version.
